added authorize section to l5-swagger
